examples/syntaxErrors/typeCycleDependenciesError1.lcp

B = A
A = B

main : () -> () -> ()
main x y = ()
